cros: Fix race on feedback extension loading

- Move ExtensionHost check before loading feedback extension to fix the
  race that ExtensionHost check could run after the loading makes
  feedback background page up and running;
- Handle the case where feedkback background host already exists,
  just in case.
- Add a retry in EnsureFeedbackUI to be sure the UI will be created;

BUG=711123

Review-Url: https://codereview.chromium.org/2837613002
Cr-Commit-Position: refs/heads/master@{#466395}

Former-commit-id: 24d15b15c85b8d3a60c6985add50824fa6602467